# winnow

./: README.md  demo.tape  lefthook.yml  main.py  pyproject.toml
demos/: README.md
demos/filtering/: demo.tape  generate.py
demos/selectors/: demo.tape  generate.py
src/jnav/: __main__.py  app.py  buffer.py  detail_panel.py  detail_tree.py  entry_summary.py  field_manager.py  field_manager_screen.py  field_mapping.py  filter_manager_screen.py  filter_provider.py  filter_tree.py  filtering.py  help_screen.py  inline_tree.py  log_entry_item.py  log_entry_renderer.py  log_list_view.py  log_model.py  modal.py  model.py  offset_group.py  parsing.py  pipeline.py  reading.py  role_mapper.py  scrollbar_overlay.py  search_engine.py  search_input_screen.py  selector_manager_screen.py  selector_provider.py  state.py  store.py  text_input_screen.py  tree_rendering.py  virtual_list_view.py
tests/: conftest.py  test_buffer.py  test_detail_tree.py  test_field_manager.py  test_filter_provider.py  test_filter_tree.py  test_filtering.py  test_key_sequences.py  test_log_list_view.py  test_log_model.py  test_parsing.py  test_role_mapper.py  test_search_engine.py  test_selector_provider.py  test_tree_rendering.py  test_virtual_list_view.py
tests/integration/: test_detail_view_on_open.py  test_pipeline.py
