[project]
name = "jnav"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=1.0.0",
    "click>=8.1.0",
    "jq>=1.8.0",
    "python-json-logger>=4.0.0",
    "aioreactive>=0.20.0",
    "orjson>=3.11.8",
    "pydantic>=2.12.5",
]

[project.scripts]
jnav = "jnav.__main__:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportUnannotatedClassAttribute = false
reportIncompatibleUnannotatedOverride = true
reportUnusedCallResult = false

[tool.pytest.ini_options]
asyncio_mode = "strict"
filterwarnings = [
    "ignore::DeprecationWarning:aioreactive",
    "ignore::DeprecationWarning:expression",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
